fix: register api issues
